fixed padding on mobile mode

--- a/src/index.css
+++ b/src/index.css
@@ -239,4 +239,7 @@ body
 
   .navbar-header
   { background-color: #9888ae; }
+
+  .contact
+  { padding: 5vh 5vh; }
 }
